--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="assets/css/todomvc-common.css">
+  <link rel="stylesheet" href="assets/css/todomvc-app.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
